[package]
name = "apush"
authors = ["Cryptex"]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadqueue = { version = "0.2", default-features = false, features = ["unlimited"] }
fcm_v1 = { git = "https://github.com/Cryptex-github/fcm_v1.git" }
log = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
